--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: python
 python:
   - "2.7"
-install: pip install -r requirements.txt --use-mirrors
-script: python setup.py nosetests
+install: 
+  - pip install -r requirements.txt --use-mirrors
+  - pip install coverage
+  - pip install coveralls
+script: python setup.py nosetests --with-coverage --cover-package=zktraffic
+after_success:
+  coveralls
