--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,9 @@ mock
 nose
 psutil>=2.1.0
 scapy==2.2.0-dev
+twitter.common.app
+twitter.common.collections
+twitter.common.decorators
+twitter.common.exceptions
+twitter.common.http
 twitter.common.log
