--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ mock
 nose
 psutil>=2.1.0
 scapy==2.2.0-dev
-twitter.common.app
-twitter.common.collections
-twitter.common.decorators
-twitter.common.exceptions
-twitter.common.http
-twitter.common.log
+twitter.common.app==0.3.3
+twitter.common.collections==0.3.3
+twitter.common.decorators==0.3.3
+twitter.common.exceptions==0.3.3
+twitter.common.http==0.3.3
+twitter.common.log==0.3.3
 hexdump
