--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ mock
 nose
 psutil>=2.1.0
 scapy==2.3.1
+tabulate
 twitter.common.app==0.3.3
 twitter.common.collections==0.3.3
 twitter.common.decorators==0.3.3
