--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,15 @@ language: python
 sudo: false
 python:
   - "2.7"
+  - "3.5"
+  - "3.6"
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install: 
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements.txt
   - pip install coverage
   - pip install coveralls
 script: python setup.py nosetests --with-coverage --cover-package=zktraffic
