--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 ansicolors
-dpkt-fix
+dpkt==1.9.2
 hexdump
 mock
 nose
-psutil>=2.1.0
-scapy==2.3.1
-six
+psutil==5.6.1
+scapy==2.4.2
+six==1.12.0
 tabulate
-twitter.common.app==0.3.3
-twitter.common.collections==0.3.3
-twitter.common.decorators==0.3.3
-twitter.common.exceptions==0.3.3
-twitter.common.http==0.3.3
-twitter.common.log==0.3.3
+twitter.common.app==0.3.11
+twitter.common.collections==0.3.11
+twitter.common.decorators==0.3.11
+twitter.common.exceptions==0.3.11
+twitter.common.http==0.3.11
+twitter.common.log==0.3.11
